--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      <!background-image: url('fundo.jpg');>
+      background-image: url('fundo.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
