--- a/templates/index.html
+++ b/templates/index.html
@@ -48,54 +48,7 @@
   <button id="startBtn">Iniciar Gravação</button>
   <button id="stopBtn" disabled>Parar Gravação</button>
   <button id="sendBtn" disabled>Enviar Áudio</button
-  <script>
-  let mediaRecorder;
-  let audioChunks = [];
-
-  const startBtn = document.getElementById('startBtn');
-  const stopBtn = document.getElementById('stopBtn');
-  const sendBtn = document.getElementById('sendBtn');
-
-  startBtn.addEventListener('click', async () => {
-    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-    mediaRecorder = new MediaRecorder(stream);
-
-    mediaRecorder.ondataavailable = event => {
-      audioChunks.push(event.data);
-    };
-
-    mediaRecorder.onstop = () => {
-      sendBtn.disabled = false;
-    };
-
-    audioChunks = [];
-    mediaRecorder.start();
-    startBtn.disabled = true;
-    stopBtn.disabled = false;
-  });
-
-  stopBtn.addEventListener('click', () => {
-    mediaRecorder.stop();
-    startBtn.disabled = false;
-    stopBtn.disabled = true;
-  });
-
-  sendBtn.addEventListener('click', () => {
-    const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
-    const formData = new FormData();
-    formData.append('audio', audioBlob, 'gravacao.webm');
-
-    fetch('/upload', {
-      method: 'POST',
-      body: formData
-    }).then(() => {
-      alert('Áudio enviado com sucesso!');
-      sendBtn.disabled = true;
-    }).catch(() => {
-      alert('Erro ao enviar o áudio.');
-    });
-  });
-<script src="script.js"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
 
